Update paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<h1>Howdy FED2526</h1>
-	<p>Subway of Uniqlo?</p>
+	<p>Amazing oriental of toch uniqlo?</p>
 	<script defer src="scripts/script.js"></script>
 </body>
 	
